--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     --muted-text:#828276;
     --blacked-section:#051124;
     --card-colors:#001a46;
+    --times-bg:#402ab0;
+    --blue-color:#019dea;
 }
 
 *{
@@ -491,6 +493,8 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
     align-items: center;
     justify-content: space-between;
     list-style-type: none;
+    flex-wrap: wrap;
+    row-gap: 15px;
 }
 
 .showcase ul li h3{
@@ -500,106 +504,400 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
 }
 
 /* Showcse content */
-.contentBox .wrapper{
+.contentBox{
     display: flex;
-    column-gap: 20px;
     flex-wrap: wrap;
-    row-gap: 15px;
+    flex-direction: row;
 }
 
-.contentBox .wrapper .cards{
-    max-width: 350px;
+.contentBox .cards{
+    max-width: 330px;
     margin-top: 40px;
     background: var(--card-colors);
-    padding: 10px;
+    padding: 15px;
+    margin-right: 20px;
     border-radius: 10px;
     position: relative;
     z-index: 1;
 }
 
-.contentBox .wrapper .cards .imgBox{
+.contentBox .cards .imgBox{
     width: 100%;
     height: 400px;
+    position: relative;
+    overflow: hidden;
 }
 
-.contentBox .wrapper .cards .imgBox img{
-    width: 100%;
+.contentBox .cards .imgBox img{
+    width: 140%;
     height: 100%;
 }
 
-.contentBox .wrapper .cards .content{
+.contentBox .cards .imgBox:hover img{
+    transform: scale(1.2) rotate(5deg);
+    transition: 1s;
+}
+
+.contentBox .cards .imgBox .likes{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: var(--white-color);
+    padding: 5px 7px;
+    color: var(--muted-text);
+    border-radius: 20px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.contentBox .cards .imgBox .likes i{
+    margin-right: 4px;
+}
+
+.contentBox .cards .content{
     margin-top: 10px;
 }
 
-.contentBox .wrapper .cards .content h3{
+.contentBox .cards .content h3{
     color: var(--white-color);
     text-transform: capitalize;
     margin-bottom: 5px;
+    font-size: .9rem;
+    font-weight: 800;
 }
 
-.contentBox .wrapper .cards .content .owner{
+.contentBox .cards .content .owner{
     margin-top: 10px;
     display: flex;
     justify-content: flex-start;
     column-gap: 10px;
 }
 
-.contentBox .wrapper .cards .content .owner li img{
-    width: 50px;
-    height: 50px;
-    border-radius: 20px;
+.contentBox .cards .content .owner li img{
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
 }
 
-.contentBox .wrapper .cards .content .owner li span{
+.contentBox .cards .content .owner li span{
     color: var(--white-color);
     text-transform: capitalize;
     font-size: .7rem;
 }
 
-.contentBox .wrapper .cards .content .owner li h3 a{
-    font-size: 1rem;
+.contentBox .cards .content .owner li h3 a{
+    font-size: .9rem;
     text-transform: capitalize;
     text-decoration: none;
     color: var(--white-color);
 }
 
-.contentBox .wrapper .cards .content .owner li h3{
-    font-size: 1rem;
+.contentBox .cards .content .owner li h3{
+    font-size: .9rem;
     text-transform: capitalize;
     text-decoration: none;
     color: var(--white-color);
     right: 10px;
 }
 
-.contentBox .wrapper .cards .content .owner li:nth-child(3){
+.contentBox .cards .content .owner li:nth-child(3){
     position: absolute;
-    right: 10px;
+    right: 15px;
 }
 
-.contentBox .wrapper .cards .content .bid{
+.contentBox .cards .content .bid{
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
+}
+
+.contentBox .cards .content .bid li span{
+    color: var(--white-color);
+    text-transform: capitalize;
+    font-size: .8rem;
+    border:1px solid var(--blues-purple);
+    padding: 8px;
+    border-radius: 5px;
+    cursor: default;
+}
+
+.contentBox .cards .content .bid li span:hover{
+    background: var(--blues-purple);
+}
+
+.contentBox .cards .content .bid li a{
+    color: var(--white-color);
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: .8rem;
+}
+
+.contentBox .cards .content .bid li i{
+    color: var(--white-color);
+    margin-right: 5px;
+    font-size: .7rem;
+}
+
+#timesSell,
+#timesSell2,
+#timesSell3,
+#timesSell4,
+#timesSell5,
+#timesSell6{
+    background: var(--times-bg) ;
+    color: var(--color-lines);
+    padding: 7px;
+    text-align: center;
+    position: absolute;
+    border-radius: 10px;
+    bottom: 5px;
+    margin-left: 30%;
+    font-size: .8rem;
+    cursor: pointer;
+    text-align: center;
+}
+
+/*================== Top Creators=================== */
+.topCreators{
+    margin-top: 80px;
+    background: var(--body-Bg);
+}
+
+.topCreators ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+    flex-wrap: wrap;
+    row-gap: 15px;
+}
+
+.topCreators ul li h3{
+    color: var(--white-color);
+    font-size: 1.7rem;
+    text-transform: capitalize;
+}
+
+.topCreators .contentCreators{
+    display: flex;
+    gap: 15px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.topCreators .contentCreators .cards{
+    background: var(--card-colors);
+    padding: 10px;
+    border-radius: 10px;
+    width: 250px;
+    height: 100px;
+    display: flex;
+}
+
+.topCreators .contentCreators .cards ul li .images{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 50%;
+    position: relative;
+}
+
+.topCreators .contentCreators .cards ul li .images img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.topCreators .contentCreators .cards ul li .images i{
+    position: absolute;
+    color: var(--white-color);
+    top: 4px;
+    right: -1px;
+    background: var(--blue-color);
+    border: 1px solid var(--white-color);
+    border-radius: 50%;
+    font-size: .8rem;
+    padding: .7px;
+}
+
+.topCreators .contentCreators .cards ul li span{
+    color: var(--white-color);
+    text-transform: capitalize;
+    cursor: default;
+}
+
+.topCreators .contentCreators .cards ul li span:hover{
+    color: var(--blues-purple);
+}
+
+.topCreators .contentCreators .cards ul li p{
+    color: var(--white-color);
+    text-transform: uppercase;
+    margin-top: 6px;
+    cursor: default;
+}
+
+
+/* ====================featured arts=========== */
+.featured{
+    margin-top: 80px;
+    background: var(--body-Bg);
+}
+
+.featured ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+    flex-wrap: wrap;
+    row-gap: 15px;
+}
+
+.featured ul li h3{
+    color: var(--white-color);
+    font-size: 1.7rem;
+    text-transform: capitalize;
+}
+
+
+/* Showcse content */
+.featuredContent{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.featuredContent .cards{
+    max-width: 330px;
+    margin-top: 40px;
+    background: var(--card-colors);
+    padding: 15px;
+    margin-right: 20px;
+    border-radius: 10px;
+    position: relative;
+    z-index: 1;
+}
+
+.featuredContent .cards .imgBox{
+    width: 100%;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
+}
+
+.featuredContent .cards .imgBox img{
+    width: 140%;
+    height: 100%;
+}
+
+.featuredContent .cards .imgBox:hover img{
+    transform: scale(1.2) rotate(5deg);
+    transition: 1s;
+}
+
+.featuredContent .cards .imgBox .likes{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: var(--white-color);
+    padding: 5px 7px;
+    color: var(--muted-text);
+    border-radius: 20px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.featuredContent .cards .imgBox .likes i{
+    margin-right: 4px;
+}
+
+.featuredContent .cards .content{
     margin-top: 10px;
 }
 
-.contentBox .wrapper .cards .content .bid li span{
+.featuredContent .cards .content h3{
+    color: var(--white-color);
+    text-transform: capitalize;
+    margin-bottom: 5px;
+    font-size: .9rem;
+    font-weight: 800;
+}
+
+.featuredContent .cards .content .owner{
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 10px;
+}
+
+.featuredContent .cards .content .owner li img{
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+}
+
+.featuredContent .cards .content .owner li span{
+    color: var(--white-color);
+    text-transform: capitalize;
+    font-size: .7rem;
+}
+
+.featuredContent .cards .content .owner li h3 a{
+    font-size: .9rem;
+    text-transform: capitalize;
+    text-decoration: none;
+    color: var(--white-color);
+}
+
+.featuredContent .cards .content .owner li h3{
+    font-size: .9rem;
+    text-transform: capitalize;
+    text-decoration: none;
+    color: var(--white-color);
+    right: 10px;
+}
+
+.featuredContent .cards .content .owner li:nth-child(3){
+    position: absolute;
+    right: 15px;
+}
+
+.featuredContent .cards .content .bid{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.featuredContent .cards .content .bid li span{
     color: var(--white-color);
     text-transform: capitalize;
     font-size: .8rem;
+    border:1px solid var(--blues-purple);
+    padding: 8px;
+    border-radius: 5px;
+    cursor: default;
 }
 
-.contentBox .wrapper .cards .content .bid li a{
+.featuredContent .cards .content .bid li span:hover{
+    background: var(--blues-purple);
+}
+
+.featuredContent .cards .content .bid li a{
     color: var(--white-color);
     text-decoration: none;
     text-transform: capitalize;
-    text-transform: capitalize;
     font-size: .8rem;
 }
 
-
-
-
-
+.featuredContent .cards .content .bid li i{
+    color: var(--white-color);
+    margin-right: 5px;
+    font-size: .7rem;
+}
 
 
 
@@ -763,6 +1061,10 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
         flex-wrap: wrap;
         justify-content: center;
         row-gap: 5px;
+    }
+
+    .contentBox .cards{
+        margin-left: -17px;
     }
     
 }
