--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ box-sizing:border-box;
 /* Public Function */
 body{
     background: var(--body-Bg);
-    height: 10000px;
+    height: 15000px;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -488,7 +488,7 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
     background: var(--blacked-section);
 }
 
-.showcase ul{
+.showcase .title ul{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -508,6 +508,10 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+}
+
+.showcase .contentBox .content ul{
+    list-style-type: none;
 }
 
 .contentBox .cards{
@@ -744,7 +748,7 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
 /* ====================featured arts=========== */
 .featured{
     margin-top: 80px;
-    background: var(--body-Bg);
+    background: var(--blacked-section);
 }
 
 .featured ul{
@@ -902,9 +906,98 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
 }
 
 
+/* ===============Seconds Banner==================== */
+/* Banner Bottom */
+.bannerBottom{
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.bannerBottom .content{
+    max-width: 500px;
+}
+
+.bannerBottom .content h1{
+    margin-top: 10px;
+    color: var(--white-color);
+    font-weight: 700;
+    font-size: 2.5rem;
+    text-transform: capitalize;
+}
+
+.bannerBottom .content h2{
+    text-transform: uppercase;
+    font-size: 3.5rem;
+    margin-top: 10px;
+    color: black;
+    font-weight: 500;
+  -webkit-text-fill-color: var(--body-Bg); /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--outline-border);
+}
+
+.bannerBottom .content p{
+    color: var(--muted-text);
+}
+
+.bannerBottom .content ul{
+    list-style: none;
+    display: flex;
+    column-gap: 20px;
+    margin-top: 40px;
+    flex-wrap: wrap;
+    row-gap: 5px;
+}
+
+.bannerBottom .imagesBox .images{
+    max-width: 400px;
+}
+
+.bannerBottom .imagesBox .images img{
+    width: 100%;
+}
 
 
 
+/* =================Latest News=============== */
+.news p{
+    color: var(--white-color);
+    font-family: 'Poppins', sans-serif;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: var(--muted-text);
+}
+
+.ownerNews{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.contentBox .cards .content .ownerNews li img {
+    border-radius: 50%;
+    border: 1px solid var(--blues-purple);
+}
+
+.contentBox .cards .content .ownerNews li i {
+    border: 1px solid var(--blues-purple);
+    padding: 10px;
+    border-radius: 50%;
+    color: var(--white-color);
+}
+
+.contentBox .cards .date{
+    position: absolute;
+    bottom: 0;
+    left: 2px;
+    padding: 5px;
+    background: var(--white-color);
+    color: var(--muted-text);
+    border-radius: 5px;
+}
 
 
 
@@ -1069,7 +1162,7 @@ nav .hiddenNav .navigation .navigator4 ul li a::before
         margin-left: -15px;
     }
 
-    .showcase ul, .topCreators.title ul{
+    .showcase .title ul, .topCreators .title ul, .featured .title ul{
         display: block;
         width: 200px;
     }
